fix scrollbar

--- a/src/clipboards/Area.css
+++ b/src/clipboards/Area.css
@@ -7,6 +7,7 @@
   color: #fffc;
   resize: none;
   transition: 0.3s;
+  scrollbar-width: none;
 
   &:focus {
     outline: none;
